delivery-together-post-api/kubernetes/stage/k8s-deployments.yaml
###################################
# delivery-together-post-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-together-post-api
  labels:
    app: delivery-together-post-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-together-post-api
  template:
    metadata:
      labels:
        app: delivery-together-post-api
    spec:
      containers:
        - name: delivery-together-post-api
          image: us-central1-docker.pkg.dev/esoteric-realm-415003/delivery-together-repository/delivery-together-post-api:1.0.0
          ports:
            - containerPort: 3001
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: delivery-together-post-service
  annotations:
    cloud.google.com/backend-config: '{"default": "delivery-together-post-config"}'
spec:
  type: NodePort
  selector:
    app: delivery-together-post-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 31004
